--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 0;
   font-family: sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -19,5 +19,51 @@ code {
   padding: 10px;
   border-radius: 14px;
   border: 1px solid lightgray; 
+  margin: 10px;
+}
+
+.card-img {
+  width: 100%;
+}
+
+.card-title {
+  margin-bottom: 0px;
+}
+
+.desc{
+  margin: 0px;
+  color: gray;
+} */
+
+/* index.css */
+
+.title {
+  margin-left: 20px;
+}
+
+.card {
+  width: 280px;
+  padding: 10px;
+  border-radius: 14px;
+  border: 1px solid lightgray;
   margin: 15px;
+}
+
+.card-img {
+  width: 100%;
+  height: 180px;
+  border-radius: 14px;
+  background-image: url("https://picsum.photos/280/180/?sea");
+  background-size: cover;
+  background-position: center;
+  background-color: #f0f0f0; /* Fallback background color */
+}
+
+.card-title {
+  margin-bottom: 0px;
+}
+
+.desc {
+  margin: 0px;
+  color: gray;
 }
